--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "openai": "^5.3.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "tiktoken": "^1.0.21"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
